--- a/src/SidebarChat.css
+++ b/src/SidebarChat.css
@@ -9,11 +9,27 @@
 	background-color: #ebebeb;
 }
 
-,sidebarChat__info > h2 {
+.sidebarChat__info > h2 {
 	font-size: 16px;
 	margin-bottom: 8px;
 }
 
 .sidebarChat__info{
 	margin-left: 15px;
+}
+
+a{
+	text-decoration: none;
+}
+
+a:link {
+	color: black;
+}
+
+a:visited {
+	color: black;
+}
+
+a:active {
+	background-color: #ebebeb;
 }
